docker.io (1.11.2~ds1-7) UNRELEASED; urgency=medium

  * Update basic-smoke test with "set -x" for debuggability and proper Depends
  * Build from within GOPATH so Go packages are resolved properly

 -- Tianon Gravi <tianon@debian.org>  Fri, 19 Aug 2016 12:52:55 -0700

docker.io (1.11.2~ds1-6) unstable; urgency=medium

  [ Tianon Gravi ]
  * Add DEP-3 headers for "skip-racy-unit-tests.patch"
  * Add a note about "check-config.sh" to README.Debian; thanks Tincho!
  * Add "docker-doc" to Suggests (Closes: #831748); thanks Ben!
  * Remove "lxc" from Suggests (no longer a supported execution backend)

  [ Nicolas Braud-Santoni ]
  * Fix /etc/docker permissions (Closes: #831324)

 -- Tianon Gravi <tianon@debian.org>  Wed, 20 Jul 2016 16:34:52 -0700

docker.io (1.11.2~ds1-5) unstable; urgency=medium

  * Skip racy "TestRunCommandWithOutputAndTimeoutKilled" during build (see also
    https://github.com/docker/docker/issues/22965)

 -- Tianon Gravi <tianon@debian.org>  Tue, 12 Jul 2016 07:46:35 -0700

docker.io (1.11.2~ds1-4) unstable; urgency=medium

  [ Tianon Gravi ]
  * Add new script to generate Build-Depends based on "go list" instead of
    "hack/vendor.sh" (and update Build-Depends using it)
  * Update "/etc/default/docker" text to aggressively discourage use, linking to
    upstream's documentation for the recommended alternatives
    ("/etc/docker/daemon.json" and systemd drop-ins)
  * Update gbp.conf for pristine-tar usage now that we're no longer multi-orig
  * Remove "/var/lib/docker" upon purge (Closes: #739257)

  [ Dmitry Smirnov ]
  * Add support for DEB_BUILD_OPTIONS=nocheck in debian/rules

 -- Tianon Gravi <tianon@debian.org>  Mon, 11 Jul 2016 22:09:01 -0700

docker.io (1.11.2~ds1-3) unstable; urgency=medium

  * Team upload.
  * Updated "skip-privileged-unit-tests.patch" to skip more privileged
    tests in order to fix FTBFS in pbuilder.
  * Install "opts" directory to -dev package.
