@@ -2,6 +2,7 @@ docker.io (1.11.2~ds1-7) UNRELEASED; urgency=medium
 
   * Update basic-smoke test with "set -x" for debuggability and proper Depends
   * Build from within GOPATH so Go packages are resolved properly
+  * Split "dh_auto_build-arch" from "dh_auto_build-indep"
 
  -- Tianon Gravi <tianon@debian.org>  Fri, 19 Aug 2016 12:52:55 -0700
 
